JumpScript/tests/baselines/reference/asyncFunctionDeclaration13_es2017.errors.txt
tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration13_es2017.jump(3,11): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration13_es2017.jump (1 errors) ====
    async function foo(): Promise<void> {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }
    